<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_action_bar_up_description">Navigate up</string>
    <string name="accessibility_add_to_favorites">Add to favorites</string>
    <string name="accessibility_add_to_library">Add to library</string>
    <string name="accessibility_added_to_library">Added to library</string>
    <string name="accessibility_audio_offline">Audio available offline</string>
    <string name="accessibility_audio_progress">Audio progress</string>
    <string name="accessibility_audiobook_delete_download">Delete download</string>
    <string name="accessibility_audiobook_download">Download audiobook</string>
    <string name="accessibility_bigger_font">Bigger font size</string>
    <string name="accessibility_book_content">Book content</string>
    <string name="accessibility_browse">Browse</string>
    <string name="accessibility_cancel_download">Cancel download</string>
    <string name="accessibility_close">Close</string>
    <string name="accessibility_dark_theme">Dark theme</string>
    <string name="accessibility_delete">Delete</string>
    <string name="accessibility_download_audio">Download audio</string>
    <string name="accessibility_drag_to_reorder">Drag to reorder</string>
    <string name="accessibility_elapsed_time">Elapsed time</string>
    <string name="accessibility_episode_delete_download">Delete download</string>
    <string name="accessibility_episode_download">Download episode</string>
    <string name="accessibility_episode_downloaded">Episode downloaded</string>
    <string name="accessibility_episode_stop_download">Stop download</string>
    <string name="accessibility_evernote">Evernote</string>
    <string name="accessibility_fast_forward">Fast forward</string>
    <string name="accessibility_light_theme">Light theme</string>
    <string name="accessibility_next_chapter">Next chapter</string>
    <string name="accessibility_open_menu">Open menu</string>
    <string name="accessibility_pause">Pause</string>
    <string name="accessibility_play">Play</string>
    <string name="accessibility_playback_speed">Playback speed %s</string>
    <string name="accessibility_previous_chapter">Previous Chapter</string>
    <string name="accessibility_push_notifications">Set reminders</string>
    <string name="accessibility_remove_from_favorites">Remove from favorites</string>
    <string name="accessibility_rename">Rename</string>
    <string name="accessibility_rewind">Rewind</string>
    <string name="accessibility_save">Save</string>
    <string name="accessibility_share">Share</string>
    <string name="accessibility_smaller_font">Smaller font size</string>
    <string name="accessibility_stop">Stop</string>
    <string name="accessibility_total_time">total time</string>
    <string name="accessibility_unlock_premium">Unlock premium content</string>
    <string name="account_blinkist_title">Email</string>
    <string name="account_facebook_title">Facebook</string>
    <string name="account_google_title">Google</string>
    <string name="account_settings_add_blinkist_account">Add email login</string>
    <string name="account_settings_category_accounts">Your Logins</string>
    <string name="account_settings_empty_error_message">For data safety, you need to be online to access this.</string>
    <string name="account_settings_empty_error_title">Account info unavailable</string>
    <string name="account_type">com.blinkslabs.blinkist.android</string>
    <string name="action_done">done</string>
    <string name="action_highlight">Highlight</string>
    <string name="activity_title_account_settings">Change login details</string>
    <string name="activity_title_add_blinkist_account">Add email login</string>
    <string name="activity_title_edit_blinkist_account">Change Email</string>
    <string name="activity_title_subscription">Upgrade now</string>
    <string name="activity_title_unlink_facebook_account">Facebook</string>
    <string name="activity_title_unlink_google_account">Google</string>
    <string name="add_books">Add Blinks</string>
    <string name="add_tag">Add tag</string>
    <string name="add_tags">Add tags</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_library">Add to Library</string>
    <string name="added_to_library">Added to library</string>
    <string name="adjustio_env">production</string>
    <string name="almost_ready">Almost ready!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="amazon_analytics_app_id">5a41703d1bc14e5aa232c6be55700aa7</string>
    <string name="amazon_analytics_cognito_id">us-east-1:6e3942a4-aaea-4110-b264-4986bf3c71ec</string>
    <string name="app_name">Blinkist</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attribution_survey_action_done">Done</string>
    <string name="attribution_survey_action_skip">Skip</string>
    <string name="attribution_survey_item_display_banner_ad">Online Advertising</string>
    <string name="attribution_survey_item_newspaper">Printed Newspaper or Magazine</string>
    <string name="attribution_survey_item_online_news_blog">Online Article/Blog Post</string>
    <string name="attribution_survey_item_other">Other</string>
    <string name="attribution_survey_item_podcast">Podcast</string>
    <string name="attribution_survey_item_radio">Radio</string>
    <string name="attribution_survey_item_referral">Word of Mouth</string>
    <string name="attribution_survey_item_tv">TV</string>
    <string name="attribution_survey_item_youtube">YouTube</string>
    <string name="attribution_survey_title">How did you hear about Blinkist?</string>
    <string name="audio_downloading_done_notification_title">Download complete</string>
    <string name="audio_downloading_failed_notification_message">Please try again!</string>
    <string name="audio_downloading_failed_notification_title">Download failed</string>
    <string name="audio_downloading_notification_title">Downloading %s</string>
    <string name="audio_queue_add_action">Add to queue</string>
    <string name="audio_queue_bib_added_event_message">This title has been added to your queue</string>
    <string name="audio_queue_bib_already_added_event_message">This title is already in your queue</string>
    <string name="audio_queue_empty_message">You haven’t queued any titles yet. You can do this from your Library.</string>
    <string name="audio_queue_episode_added_event_message">This episode has been added to your queue</string>
    <string name="audio_queue_episode_already_added_event_message">This episode is already in your queue</string>
    <string name="audio_queue_suggested_header">Suggested for you</string>
    <string name="audio_queue_title">Queue</string>
    <string name="audio_queue_user_choice_header">Queued by you</string>
    <string name="audio_removing_notification_title">Removing %s</string>
    <string name="audiobook">Audiobook</string>
    <string name="audiobook_additional_information">Additional information</string>
    <string name="audiobook_catalog_title">Audiobooks</string>
    <string name="audiobook_chapter">Chapter %d</string>
    <string name="audiobook_chapters_title">Jump to chapter</string>
    <string name="audiobook_cover_button_unavailable_purchase">Unavailable for purchase</string>
    <string name="audiobook_cover_country_unavailable_message">This audiobook is unavailable</string>
    <string name="audiobook_cover_credits_confirmation_title">Use 1 Audiobook credit?</string>
    <string name="audiobook_cover_credits_subtitle_basic">Upgrade to use your credits</string>
    <string name="audiobook_cover_generic_error_message">Something went wrong. Please try again later.</string>
    <string name="audiobook_cover_no_purchase_message">You\'ve already purchased this audiobook, so you weren\'t charged. Enjoy!</string>
    <string name="audiobook_cover_offline_error_message">To buy, please connect to the internet.</string>
    <string name="audiobook_cover_playstore_error_message">There was an error connecting to the Google Play Store. Please try again.</string>
    <string name="audiobook_cover_publisher_description">Publisher description</string>
    <string name="audiobook_cover_purchase_processing_message">Your purchase was successful and will appear when you reconnect to the internet.</string>
    <string name="audiobook_cover_show_less">Show less</string>
    <string name="audiobook_cover_show_more">Read more</string>
    <string name="audiobook_cover_state_download">Download audiobook</string>
    <string name="audiobook_cover_state_downloaded">Audiobook downloaded</string>
    <string name="audiobook_cover_state_downloading">Downloading audiobook</string>
    <string name="audiobook_credits_dialog_positive_button">Confirm</string>
    <string name="audiobook_credits_settings_title">Audiobook Credits</string>
    <string name="audiobook_credits_settings_upgrade_subtitle">Upgrade now to use your audiobook credits</string>
    <string name="audiobook_current_chapter_indicator_content_description">Current chapter</string>
    <string name="audiobook_description">Publisher Description</string>
    <string name="btn_log_in_facebook">Log in with Facebook</string>
    <string name="btn_log_in_google">Log in with Google</string>
    <string name="follow_us_on_facebook">Follow us on Facebook</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="log_out">Log out</string>
    <string name="login">Log in</string>
    <string name="manage_your_subscription">Manage your subscription</string>
    <string name="onboarding_signup_title">Let’s start exploring</string>
    <string name="pref_account">Account</string>
    <string name="pref_feedback">Feedback</string>
    <string name="pref_version">Version</string>
    <string name="settings_category_about">About</string>
    <string name="settings_title">Settings</string>
    <string name="sign_up_btn_create_account">Create new account</string>
    <string name="upgrade_now">Upgrade now</string>
</resources>