<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationContentDescription="@string/accessibility_action_bar_up_description"
            app:navigationIcon="@drawable/ic_arrow_back_24dp"
            app:titleTextAppearance="@style/ToolbarTitleBoldTextAppearance"/>
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            style="@style/T28"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="E-mail address"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            style="@style/T18"/>
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_border"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:fontFamily="@font/cera_pro_regular"
            android:textColorHighlight="@color/fastergreen"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Password"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            style="@style/T18"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_border"
            android:textColorHighlight="@color/fastergreen"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:fontFamily="@font/cera_pro_regular"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:background="@null"
                android:letterSpacing="0.2"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Log in"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColor="#ffffff"
            android:background="@color/fastergreen"
            android:fontFamily="@font/cera_pro_bold"
            android:textAllCaps="false"/>

        <Button android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/forgot_password_title"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="#2ce080"
            android:padding="8dp"
            android:minHeight="56dp"
            android:textAllCaps="false"
            android:fontFamily="@font/cera_pro_bold"
            style="?android:attr/borderlessButtonStyle" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button android:id="@+id/connectFacebookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_log_in_facebook"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/cera_pro_bold"
            android:textColor="#ffffff"
            android:drawableLeft="@drawable/ic_facebook"
            android:textAllCaps="false"
            android:backgroundTint="#3b5998" />

        <Button android:id="@+id/connectGoogleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_log_in_google"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/cera_pro_bold"
            android:textColor="#ffffff"
            android:drawableLeft="@drawable/ic_google_white_bg"
            android:textAllCaps="false"
            android:backgroundTint="#4285f4" />


    </LinearLayout>
</ScrollView>
